docs(local-spark): CLAUDE.md 換本機 Spark 測試節 + Worktree R3 隔離